--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,41 +3,107 @@
 
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    {% block responsivnes %}
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% endblock %}
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Reportas - {% block title %}{% endblock %}</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  {% block responsivnes %}
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% endblock %}
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Reportas - {% block title %}{% endblock %}</title>
 
-    <!-- Bootstrap -->
-    <link href="{{ url_for('static', filename='vendors/normalize.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='vendors/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link href="{{ url_for('static', filename='vendors/normalize.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='vendors/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    {% block head %}{% endblock %}
+  {% block head %}{% endblock %}
 	{% block styles %}{% endblock %}
 	{% block scripts %}{% endblock %}
 </head>
 
 <body>
-    <div class="container">
-        {% for message in get_flashed_messages() %}
-            <div class="alert alert-warning">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
-                {{ message }}
-                </div>
-        {% endfor %}
-    	{% block body %}{% endblock %}
+    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+        <div class="container topnav">
+          <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand topnav" href="{{ url_for('home.homepage') }}">Open Stock</a>
+          </div>
+
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li><a href="#">Analyses</a></li>
+              {% if current_user.is_authenticated %}
+                  <li><a href="#">Database</a></li>
+                  <li><a href="#">Analytics</a></li>
+                  <li><a href="#">Portfolio</a></li>
+              {% endif %}
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              {% if current_user.is_authenticated %}
+                <li><a href="{{ url_for('user.logout') }}">Logout</a></li>
+                <li><a href="#"><i class="fa fa-user"></i>  {{ current_user.name }}</a></li>
+              {% else %}
+                <li><a href="{{ url_for('user.register') }}">Register</a></li>
+                <li><a href="{{ url_for('user.login') }}">Login</a></li>
+              {% endif %}
+            </ul>
+          </div>
+        </div>
+    </nav>
+
+    <div class="wrapper">
+      {% block body %}
+      {% endblock %}
+      <div class="push"></div>
     </div>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="list-inline">
+
+                        <li><a href="#">Home</a></li>
+                        <li class="footer-menu-divider">⋅</li>
+                        <li><a href="#">Analyses</a></li>
+                        {% if current_user.is_authenticated %}
+                          <li class="footer-menu-divider">⋅</li>
+                          <li><a href="#">Database</a></li>
+                          <li class="footer-menu-divider">⋅</li>
+                          <li><a href="#">Analytics</a></li>
+                          <li class="footer-menu-divider">⋅</li>
+                          <li><a href="#">Portfolio</a></li>
+                        {% endif %}
+                        <li class="footer-menu-divider">⋅</li>
+                        {% if current_user.is_authenticated %}
+                          <li><a href="{{ url_for('user.logout') }}">Logout</a></li>
+                        {% else %}
+                          <li><a href="{{ url_for('user.register') }}">Register</a></li>
+                          <li class="footer-menu-divider">⋅</li>
+                          <li><a href="{{ url_for('user.login') }}">Login</a></li>
+                        {% endif %}
+
+                    </ul>
+                    <p class="copyright text-muted small">Copyright © 2016. All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
     <script src="{{ url_for('static', filename='vendors/jquery-3.2.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='vendors/bootstrap/js/bootstrap.min.js') }}"></script>
     {% block body_scripts %}{% endblock %}
