--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -1,49 +1,14 @@
+<!-- app/templates/auth/register.html -->
+
+{% import "bootstrap/wtf.html" as wtf %}
 {% extends "base.html" %}
-
 {% block title %}Register{% endblock %}
-
 {% block body %}
-    <div class="page-header">
-        <h2>Register</h2>
-    </div>
-    <form method="post">
-        {{ form.csrf_token }}
-        <div class="form-group {% if form.email.errors %} has-error {% endif %}">
-            <label>{{form.email.label}}</label>
-            {{ form.email(class="form-control") }}
-            {% if form.email.errors %}
-                <span class="help-block">
-                    {{ form.email.errors|join("; ") }}
-                </span>
-            {% endif %}
-        </div>
-        <div class="form-group {% if form.name.errors %} has-error {% endif %}">
-            <label>{{form.name.label}}</label>
-            {{ form.name(class="form-control") }}
-            {% if form.name.errors %}
-                <span class="help-block">
-                    {{ form.name.errors|join("; ") }}
-                </span>
-            {% endif %}
-        </div>
-        <div class="form-group {% if form.password.errors %} has-error {% endif %}">
-            <label>{{form.password.label}}</label>
-            {{ form.password(class="form-control") }}
-            {% if form.password.errors %}
-                <span class="help-block">
-                    {{ form.password.errors|join("; ") }}
-                </span>
-            {% endif %}
-        </div>
-        <div class="form-group {% if form.password.errors %} has-error {% endif %}">
-            <label>{{form.password2.label}}</label>
-            {{ form.password2(class="form-control") }}
-            {% if form.password2.errors %}
-                <span class="help-block">
-                    {{ form.password2.errors|join("; ") }}
-                </span>
-            {% endif %}
-        </div>
-        {{ form.submit(class="btn btn-default") }}
-    </form>
+<div class="content-section">
+  <div class="center">
+    <h1>Register for an account</h1>
+    <br/>
+    {{ wtf.quick_form(form) }}
+  </div>
+</div>
 {% endblock %}
