--- a/app/templates/user/unconfirmed.html
+++ b/app/templates/user/unconfirmed.html
@@ -1,20 +1,18 @@
+{% import "bootstrap/wtf.html" as wtf %}
 {% extends "base.html" %}
-
 {% block title %}Confirm your account{% endblock %}
-
 {% block body %}
-<div class="page-header">
-    <h1>
-        Hello, {{ current_user.username }}!
-    </h1>
+<div class="content-section">
+  <div class="center">
     <h3>You have not confirmed your account yet.</h3>
     <p>
-        Before you can access this site you need to confirm your account.
-        Check your inbox, you should have received an email with a confirmation link.
+      Before you can access this site you need to confirm your account.
+      Check your inbox, you should have received an email with a confirmation link.
     </p>
     <p>
-        Need another confirmation email?
-        <a href="{{ url_for('user.resend_confirmation') }}">Click here</a>
+      Need another confirmation email?
+      <a href="{{ url_for('user.resend_confirmation') }}">Click here</a>
     </p>
+  </div>
 </div>
 {% endblock %}
