--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% extends "base.html" %}
 {% block title %}Login{% endblock %}
-{% block body %}
+{% block page_body %}
 <div class="content-section">
   <br/>
   {{ utils.flashed_messages() }}
