--- a/app/templates/user/unconfirmed.html
+++ b/app/templates/user/unconfirmed.html
@@ -1,7 +1,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% extends "base.html" %}
 {% block title %}Confirm your account{% endblock %}
-{% block body %}
+{% block page_body %}
 <div class="content-section">
   <div class="center">
     <h3>You have not confirmed your account yet.</h3>
