--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -29,8 +29,8 @@
 {% endblock %}
 
 {% block tail_js %}
-  <script src="{{ admin_static.url(filename='vendor/moment.min.js', v='2.9.0') }}" type="text/javascript"></script>
   <script src="{{ admin_static.url(filename='vendor/select2/select2.min.js', v='3.5.2') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='admin/js/form.js') }}"></script>
   {% if admin_view.extra_js %}
     {% for js_url in admin_view.extra_js %}
       <script src="{{ js_url }}" type="text/javascript"></script>
