Create model Sector

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -17,7 +17,7 @@
             Companies & Sectors
             <ul>
                 <li><a href="{{ url_for('company.index_view') }}">Companies</a></li>
-                <li>Sectors</li>
+                <li><a href="{{ url_for('sector.index_view') }}">Sectors</a></li>
             </ul>
         </li>
         <li>Makroeconomic Data</li>
