Update UI of DBMD

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,10 +14,13 @@
   <!-- Bootstrap -->
 
   <link href="{{ url_for('static', filename='vendors/normalize.css') }}" rel="stylesheet">
-  <link href="{{ url_for('static', filename='vendors/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
-  <link href="{{ url_for('static', filename='vendors/bootstrap/css/bootstrap-theme.min.css') }}" rel="stylesheet">
+
+  <link href="{{ url_for('static', filename='vendors/bootstrap/swatch/readable/bootstrap.min.css') }}" rel="stylesheet">
   <link href="{{ url_for('static', filename='vendors/bootstrap-daterangepicker/css/daterangepicker.css') }}" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+
+  
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -37,7 +40,7 @@
 
 <body>
   <div class="container">
-    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top topnav" role="navigation">
         <div class="container topnav">
           <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
