Create new blueprint: tools

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -115,9 +115,10 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="panel panel-primary">
-                            <div class="panel-heading">Report Parser</div>
+                            <div class="panel-heading">Reports Parser</div>
                             <div class="panel-body">
-                                Bla Bla
+                                <p>Search reports for financial data. Requires pdf file.</p>
+                                <a href="{{ url_for('dbmd_tools.report_uploader') }}">Run</a>
                             </div>
                         </div>
                     </div>
