--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -14,6 +14,7 @@
 {% endblock %}
 
 {% block page_body %}
+<div class="container">
   {% block access_control %}
   {% endblock %}
 
@@ -26,6 +27,7 @@
   {% set render_ctx = h.resolve_ctx() %}
 
   {% block body %}{% endblock %}
+</div>
 {% endblock %}
 
 {% block tail_js %}
