--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -3,14 +3,16 @@
 {% extends "base.html" %}
 {% block title %}Login{% endblock %}
 {% block page_body %}
-<div class="content-section">
-  <br/>
-  {{ utils.flashed_messages() }}
-  <br/>
-  <div class="center">
-    <h1>Login to your account</h1>
-    <br/>
-    {{ wtf.quick_form(form) }}
-  </div>
+<div class="container">
+    <div class="content-section">
+        <br/>
+        {{ utils.flashed_messages() }}
+        <br/>
+        <div class="center">
+            <h1>Login to your account</h1>
+            <br/>
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
 </div>
 {% endblock %}
