--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -4,11 +4,13 @@
 {% extends "base.html" %}
 {% block title %}Register{% endblock %}
 {% block page_body %}
+<div class="container">
 <div class="content-section">
   <div class="center">
     <h1>Register for an account</h1>
     <br/>
     {{ wtf.quick_form(form) }}
   </div>
+</div>
 </div>
 {% endblock %}
